# mg

./: CMakeLists.txt  config.h.cmake
compat/: termios.h
compat/sys/: cdefs.h
src/: CMakeLists.txt  config.h.cmake  def.h  main.c  ttydef.h
